// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Profile Manager Load should allow the load of a well formed profile 1`] = `"Profile \\"good_apple\\" of type \\"apple\\" loaded successfully."`;

exports[`Basic Profile Manager Load should allow the load of a well formed profile 2`] = `
Object {
  "age": 1,
  "description": "A tasty apple",
  "rotten": false,
}
`;

exports[`Basic Profile Manager Load should allow us to load a profile where an optional dependency doesn't exist (but fail not found is false) 1`] = `
Object {
  "dependenciesLoaded": false,
  "dependencyLoadResponses": Array [],
  "failNotFound": false,
  "message": "Profile \\"strawberry_not_found_apple\\" of type \\"strawberry\\" was not found, but the request indicated to ignore \\"not found\\" errors. The profile returned is undefined.",
  "name": "strawberry_not_found_apple",
  "type": "strawberry",
}
`;

exports[`Basic Profile Manager Load should allow us to load a profile with an optional dependency that is not specified 1`] = `
Object {
  "dependenciesLoaded": false,
  "dependencyLoadResponses": Array [],
  "failNotFound": true,
  "message": "Profile \\"strawberry_no_apple\\" of type \\"strawberry\\" loaded successfully.",
  "name": "strawberry_no_apple",
  "profile": Object {
    "amount": 1000,
    "description": "Tasty",
  },
  "type": "strawberry",
}
`;

exports[`Basic Profile Manager Load should allow us to load all profiles for all types 1`] = `
Array [
  Object {
    "dependenciesLoaded": false,
    "dependencyLoadResponses": Array [],
    "failNotFound": true,
    "message": "Profile \\"good_apple\\" of type \\"apple\\" loaded successfully.",
    "name": "good_apple",
    "profile": Object {
      "age": 1,
      "description": "A tasty apple",
      "rotten": false,
    },
    "type": "apple",
  },
  Object {
    "dependenciesLoaded": false,
    "dependencyLoadResponses": Array [],
    "failNotFound": true,
    "message": "Profile \\"tasty_apples\\" of type \\"apple\\" loaded successfully.",
    "name": "tasty_apples",
    "profile": Object {
      "age": 1,
      "description": "tasty",
      "rotten": false,
    },
    "type": "apple",
  },
  Object {
    "dependenciesLoaded": false,
    "dependencyLoadResponses": Array [],
    "failNotFound": true,
    "message": "Profile \\"strawberry_and_apple\\" of type \\"strawberry\\" loaded successfully.",
    "name": "strawberry_and_apple",
    "profile": Object {
      "amount": 1000,
      "dependencies": Array [
        Object {
          "name": "good_apple",
          "type": "apple",
        },
      ],
      "description": "Tasty",
    },
    "type": "strawberry",
  },
]
`;

exports[`Basic Profile Manager Load should detect missing parms 1`] = `"Expect Error: Profile load requested for type \\"apple\\", but no parameters supplied."`;

exports[`Basic Profile Manager Load should detect parms with a missing profile name 1`] = `"Expect Error: A profile load was requested for type \\"apple\\", but no profile name was specified."`;

exports[`Basic Profile Manager Load should fail a load if the profile doesn't have the required dependencies listed when loaded 1`] = `"Profile \\"strawberry_no_apple\\" of type \\"strawberry\\" does not exist."`;

exports[`Basic Profile Manager Load should fail a load request if the profile is not found 1`] = `"Profile \\"missing_apple\\" of type \\"apple\\" does not exist."`;

exports[`Basic Profile Manager Load should fail a load request if the profile loaded does not conform to the schema 1`] = `"Profile \\"misshapen_apple\\" of type \\"apple\\" does not exist."`;

exports[`Basic Profile Manager Load should fail a profile load with two dependencies, one of which has it's own dependency that is circular 1`] = `"Profile \\"apple_has_circular\\" of type \\"apple\\" does not exist."`;

exports[`Basic Profile Manager Load should fail a profile load with two dependencies, one of which has it's own dependency which is not found 1`] = `"Profile \\"apples_and_grapes_not_found_and_strawberries_and_bananas\\" of type \\"apple\\" does not exist."`;

exports[`Basic Profile Manager Load should fail a profile load with two dependencies, one of which has it's own dependency with an error 1`] = `"Profile \\"apples_and_grapes_with_error_and_strawberries_and_bananas\\" of type \\"apple\\" does not exist."`;

exports[`Basic Profile Manager Load should fail if the default doesn't exist 1`] = `"No default profile set for type \\"orange\\"."`;

exports[`Basic Profile Manager Load should fail the request if no profile name is specified and default profile is set but not found 1`] = `
"Your default profile named missing_orange does not exist for type orange.
To change your default profile, run \\"undefined profiles set-default orange <profileName>\\"."
`;

exports[`Basic Profile Manager Load should handle a read error 1`] = `"Profile \\"throw_the_apple\\" of type \\"apple\\" does not exist."`;

exports[`Basic Profile Manager Load should load a profile with one dependency 1`] = `
Object {
  "dependenciesLoaded": true,
  "dependencyLoadResponses": Array [
    Object {
      "dependenciesLoaded": false,
      "dependencyLoadResponses": Array [],
      "failNotFound": true,
      "message": "Profile \\"good_apple\\" of type \\"apple\\" loaded successfully.",
      "name": "good_apple",
      "profile": Object {
        "age": 1,
        "description": "A tasty apple",
        "rotten": false,
      },
      "type": "apple",
    },
  ],
  "failNotFound": true,
  "message": "Profile \\"sweet_strawberry\\" of type \\"strawberry\\" loaded successfully.",
  "name": "sweet_strawberry",
  "profile": Object {
    "amount": 1000,
    "dependencies": Array [
      Object {
        "name": "good_apple",
        "type": "apple",
      },
    ],
    "description": "Super sweet strawberries",
  },
  "type": "strawberry",
}
`;

exports[`Basic Profile Manager Load should load a profile with two dependencies 1`] = `
Object {
  "dependenciesLoaded": true,
  "dependencyLoadResponses": Array [
    Object {
      "dependenciesLoaded": false,
      "dependencyLoadResponses": Array [],
      "failNotFound": true,
      "message": "Profile \\"chocolate_strawberries\\" of type \\"strawberry\\" loaded successfully.",
      "name": "chocolate_strawberries",
      "profile": Object {
        "amount": 1000,
        "description": "chocolate covered",
      },
      "type": "strawberry",
    },
    Object {
      "dependenciesLoaded": false,
      "dependencyLoadResponses": Array [],
      "failNotFound": true,
      "message": "Profile \\"bundle_of_bananas\\" of type \\"banana\\" loaded successfully.",
      "name": "bundle_of_bananas",
      "profile": Object {
        "bundle": true,
      },
      "type": "banana",
    },
  ],
  "failNotFound": true,
  "message": "Profile \\"apples_and_strawberries_and_bananas\\" of type \\"apple\\" loaded successfully.",
  "name": "apples_and_strawberries_and_bananas",
  "profile": Object {
    "age": 1,
    "dependencies": Array [
      Object {
        "name": "chocolate_strawberries",
        "type": "strawberry",
      },
      Object {
        "name": "bundle_of_bananas",
        "type": "banana",
      },
    ],
    "description": "A tasty apple",
    "rotten": false,
  },
  "type": "apple",
}
`;

exports[`Basic Profile Manager Load should load a profile with two dependencies, one of which has it's own dependency 1`] = `
Object {
  "dependenciesLoaded": true,
  "dependencyLoadResponses": Array [
    Object {
      "dependenciesLoaded": false,
      "dependencyLoadResponses": Array [],
      "failNotFound": true,
      "message": "Profile \\"chocolate_strawberries\\" of type \\"strawberry\\" loaded successfully.",
      "name": "chocolate_strawberries",
      "profile": Object {
        "amount": 1000,
        "description": "chocolate covered",
      },
      "type": "strawberry",
    },
    Object {
      "dependenciesLoaded": true,
      "dependencyLoadResponses": Array [
        Object {
          "dependenciesLoaded": false,
          "dependencyLoadResponses": Array [],
          "failNotFound": true,
          "message": "Profile \\"green_grapes\\" of type \\"grape\\" loaded successfully.",
          "name": "green_grapes",
          "profile": Object {
            "color": "green",
            "description": "Super tasty grapes",
          },
          "type": "grape",
        },
      ],
      "failNotFound": true,
      "message": "Profile \\"bananas_and_grapes\\" of type \\"banana\\" loaded successfully.",
      "name": "bananas_and_grapes",
      "profile": Object {
        "bundle": true,
        "dependencies": Array [
          Object {
            "name": "green_grapes",
            "type": "grape",
          },
        ],
      },
      "type": "banana",
    },
  ],
  "failNotFound": true,
  "message": "Profile \\"apples_and_grapes_and_strawberries_and_bananas\\" of type \\"apple\\" loaded successfully.",
  "name": "apples_and_grapes_and_strawberries_and_bananas",
  "profile": Object {
    "age": 1,
    "dependencies": Array [
      Object {
        "name": "chocolate_strawberries",
        "type": "strawberry",
      },
      Object {
        "name": "bananas_and_grapes",
        "type": "banana",
      },
    ],
    "description": "A tasty apple",
    "rotten": false,
  },
  "type": "apple",
}
`;

exports[`Basic Profile Manager Load should load the default if requested 1`] = `"Profile \\"sweet_blueberry\\" of type \\"blueberry\\" loaded successfully."`;

exports[`Basic Profile Manager Load should load the default if requested 2`] = `
Object {
  "tart": false,
}
`;

exports[`Basic Profile Manager Load should not allow us to load a profile with an optional dependency and the optional dependency doesn't exist 1`] = `"Profile \\"strawberry_not_found_apple\\" of type \\"strawberry\\" does not exist."`;

exports[`Basic Profile Manager Load should not fail the request if 'fail not found' is false and the profile was not found 1`] = `"Profile \\"default was requested\\" of type \\"orange\\" was not found, but the request indicated to ignore \\"not found\\" errors. The profile returned is undefined."`;
